--- a/src/main/resources/templates/produktas.html
+++ b/src/main/resources/templates/produktas.html
@@ -1,42 +1,164 @@
 <!DOCTYPE html>
 <html>
-<style>
-	label {
-		display: block;
-		width: 100%;
-	}
-	input[type="text"], input.frm_button, hr {
-	
-		width: 200px;
-		margin-right: auto;
-	}
-</style>
-<body>
-	<h3>Produktai</h3>
-	<form method="POST" action="">
-		<label for="pav">Produkto pavadinimas</label>
-		<input name="pav" type="text">
-		<hr align="left">
-		<input type="submit" name="pildyti" class="frm_button" value="papildyti">
-	</form>
-	<table>
-		<tr>
-			<th>
-				veiksmai
-			</th>
-			<th>
-				pav
-			</th>			
-			
-		</tr>
-		<tr th:each="produktas : ${lst}">
-			<td>
-				<input type="button" class="keisti" value="keisti">
-				<input type="button" class="keisti" value="šalinti">				
-			</td>
-			<td th:text="${produktas.getPav()}"></td>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Dialog - Modal form</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
+	<style>
+		label {
+			display: block;
+			width: 100%;
+		}
+		input[type="text"], input.frm_button, hr {
+			display: block;
+			width: 200px;
+			margin-right: auto;
+		}
+		input.text { margin-bottom:12px; width:95%; padding: .4em; }
+		fieldset { padding:0; border:0; margin-top:25px; }
+		h1 { font-size: 1.2em; margin: .6em 0; }
+		div#products-contain { width: 350px; margin: 20px 0; }
+		div#products-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
+		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
+		.ui-dialog .ui-state-error { padding: .3em; }
+		.validateTips { border: 1px solid transparent; padding: 0.3em; }
+	</style>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script>
+	$( function() {
+		var dialog, form,
+		// From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
+		emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
+		Pavadinimas = $( "#Pavadinimas" ),
+		allFields = $( [] ).add( Pavadinimas ),
+		tips = $( ".validateTips" );
+	 
+		function updateTips( t ) {
+		      tips
+			.text( t )
+			.addClass( "ui-state-highlight" );
+		      setTimeout(function() {
+			tips.removeClass( "ui-state-highlight", 1500 );
+		      }, 500 );
+		}
+ 
+		function checkLength( o, n, min, max ) {
+			if ( o.val().length > max || o.val().length < min ) {
+				o.addClass( "ui-state-error" );
+				updateTips( "Length of " + n + " must be between " +
+				  min + " and " + max + "." );
+				return false;
+			} else {
+				return true;
+		      }
+		}
+	 
+		function checkRegexp( o, regexp, n ) {
+			if ( !( regexp.test( o.val() ) ) ) {
+				o.addClass( "ui-state-error" );
+				updateTips( n );
+				return false;
+			} else {
+				return true;
+		      }
+		}
+	 
+		function addProduct() {
+			var valid = true;
+			 allFields.removeClass( "ui-state-error" );
+		 
+			valid = valid && checkLength( Pavadinimas, "product", 3, 16 );
+
+			// valid = valid && checkRegexp( Pavadinimas, /^[a-z]([0-9a-z_\s])+$/i, "product may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
+	 
+			if ( valid ) {
+				/*
+				$( "#products tbody" ).append( "<tr>" +
+				  "<td>" + Pavadinimas.val() + "</td>" +
+				"</tr>" );
+				*/
+				alert ( 'submitinam ..'  + Pavadinimas.val() );				
+				
+				$( '#produkto_forma' ).submit();
+				dialog.dialog( "close" );
+				// alert ( 'submitinom !' );
+				
+			}
+			return valid;
+		}
+	 
+		dialog = $( "#dialog-form" ).dialog({
+			autoOpen: false,
+			height: 400,
+			width: 350,
+			modal: true,
+			buttons: {
+				"Add the product": addProduct,
+				Cancel: function() {
+					dialog.dialog( "close" );
+				}
+			},
+			close: function() {
+				form[ 0 ].reset();
+				allFields.removeClass( "ui-state-error" );
+			}
+		});
+	 
+		form = dialog.find( "form" ); /*// .on( "submit", function( event ) {
 		
-		</tr>
-	</table>
+			// event.preventDefault();
+			
+			// pridedam = addProduct();
+			
+			// alert ( pridedam );
+			
+			if (  pridedam ) {
+				alert ( 'submitinam ..' );
+				$( '#produkto_forma' ).submit();
+				alert ( 'submitinom !' );
+			}
+		});
+	 */
+		$( "#create-product" ).button().on( "click", function() {
+			dialog.dialog( "open" );
+		});
+	});
+  </script>
+</head>
+<body>
+	<div id="dialog-form" title="Create new product">
+		<p class="validateTips">All form fields are required.</p>
+		<form id="produkto_forma" method="POST">
+			<fieldset>
+				<label for="Pavadinimas">Pavadinimas</label>
+				<input type="text" name="Pavadinimas" id="Pavadinimas" value="" class="text ui-widget-content ui-corner-all">
+				<input type="hidden" name="pildyti" value="papildyti">				
+				<!-- Allow form submission with keyboard without duplicating the dialog button -->
+				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
+				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+				
+			</fieldset>
+		</form>
+	</div>
+	<div id="products-contain" class="ui-widget">
+		<h1>Esami produktai:</h1>
+		<table id="products" class="ui-widget ui-widget-content">
+			<thead>
+			<tr class="ui-widget-header ">
+				<th>pav</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr th:each="produktas : ${lst}">
+			<td th:text="${produktas.getPav()}"></td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
+	<button id="create-product">Irasyti produkta</button>
+
 </body>
 </html>
