--- a/src/main/resources/templates/produktas.html
+++ b/src/main/resources/templates/produktas.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Dialog - Modal form</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>jQuery UI Dialog - Modal form</title>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
+	<link rel="stylesheet" href="menu.css">
 	<style>
+		body {
+			padding: 0px;
+			margin: 0px;
+			text-align: center;
+			width:100%;
+		}
 		label {
 			display: block;
 			width: 100%;
 		}
-		input[type="text"], input.frm_button, hr {
+		input[type="text"], input.frm_button{
 			display: block;
 			width: 200px;
 			margin-right: auto;
@@ -129,6 +136,13 @@
   </script>
 </head>
 <body>
+	<div id="menu">
+		<ul id="menu_sarasas">
+			<li id="menu_punktas" th:each="menu_item : ${lst_menu}">
+				<a th:href="${menu_item.itemurl()}" th:text="${menu_item}"></a>
+			</li>
+		</ul>
+	</div>
 	<div id="dialog-form" title="Create new product">
 		<p class="validateTips">All form fields are required.</p>
 		<form id="produkto_forma" method="POST">
@@ -143,22 +157,24 @@
 			</fieldset>
 		</form>
 	</div>
-	<div id="products-contain" class="ui-widget">
-		<h1>Esami produktai:</h1>
-		<table id="products" class="ui-widget ui-widget-content">
-			<thead>
-			<tr class="ui-widget-header ">
-				<th>pav</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr th:each="produktas : ${lst}">
-			<td th:text="${produktas.getPav()}"></td>
-			</tr>
-			</tbody>
-		</table>
+	<div id="main">
+		<h3>Esami produktai:</h3>
+		<div id="products-contain" class="ui-widget">
+			
+			<table id="products" class="ui-widget ui-widget-content">
+				<thead>
+				<tr class="ui-widget-header ">
+					<th>pav</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr th:each="produktas : ${lst}">
+				<td th:text="${produktas.getPav()}"></td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+		<button id="create-product">Irasyti produkta</button>
 	</div>
-	<button id="create-product">Irasyti produkta</button>
-
 </body>
 </html>
