Veikia keisti, salinti produktai ir map

--- a/src/main/resources/templates/produktas_medziaga.html
+++ b/src/main/resources/templates/produktas_medziaga.html
@@ -201,8 +201,8 @@
 					<input type="button" class="keisti" value="keisti" th:attr="data-id=${produktas_medziaga.getId()}">
 					<input type="button" class="salinti" value="šalinti" th:attr="data-id=${produktas_medziaga.getId()}">				
 				</td>
-				<td th:text="${produktas_medziaga.getId_produkto()}"></td>
-				<td th:text="${produktas_medziaga.getId_medziagos()}"></td>
+				<td th:text="${produktas_medziaga.getProduktai_id()}"></td>
+				<td th:text="${produktas_medziaga.getMaistines_medz_id()}"></td>
 				<td th:text="${produktas_medziaga.getKiekis()}"></td>
 			</tr>
 			</tbody>
