--- a/src/main/resources/templates/produktas1.html
+++ b/src/main/resources/templates/produktas1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Produktai medziagos</title>
+	<title>Produktas1</title>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" href="menu.css">
@@ -19,7 +19,7 @@
 			width: 100%;
 		}
 		input[type="text"], input.frm_button{
-		
+			display: block;
 			width: 200px;
 			margin-right: auto;
 		}
@@ -31,18 +31,29 @@
 		div#products-contain table td, div#products-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
 		.ui-dialog .ui-state-error { padding: .3em; }
 		.validateTips { border: 1px solid transparent; padding: 0.3em; }
+		.pranesimas_red {
+		
+			color: red;
+		}
+		.pranesimas_grey {
+		
+			color: lightgrey;		
+		}
+		.pranesimas_green {
+		
+			color: green;		
+		}		
 	</style>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script>
 	$( function() {
 		var dialog, form,
-		// From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
+
 		pav = $( "#pav" ),
-		allFields = $( [] ).add( pav );
+		allFields = $( [] ).add( pav),
 		tips = $( ".validateTips" );
 	 
-		//isveda pranesima apie nepavykusia validacija
 		function updateTips( t ) {
 		      tips
 			.text( t )
@@ -76,12 +87,11 @@
 		function addProduct() {
 			var valid = true;
 			 allFields.removeClass( "ui-state-error" );
-			valid = valid && checkLength( pav, "Maisto medžiagų grupės pavadinimo", 3, 16 );
- /*
-			valid = valid && checkRegexp( id_produkto, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			valid = valid && checkRegexp(  id_medziagos, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			valid = valid && checkRegexp( kiekis, /Number, "id_produkto turi buti sudarytas is skaiciu 0-9. Minimalus skaiciu kiekis 1, maksimalus 16." );
-			*/
+		 
+			valid = valid && checkLength( pav, "Produkto pavadinimo", 3, 16 );
+
+			// valid = valid && checkRegexp( Pavadinimas, /^[a-z]([0-9a-z_\s])+$/i, "product may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
+	 
 			if ( valid ) {
 				/*
 				$( "#products tbody" ).append( "<tr>" +
@@ -130,13 +140,50 @@
 			}
 		});
 	 */
+		trintidialog = $( "#dialog-confirm" ).dialog({
+			autoOpen: false,
+			resizable: false,
+			height: "auto",
+			width: 400,
+			modal: true,
+			buttons: {
+				"Ištrinti įrašą": function() {
+					$( '#salinimo_forma' ).submit();
+					$( this ).dialog( "close" );
+				},
+				Atšaukti: function() {
+					$( this ).dialog( "close" );
+				}
+			}
+		});
 		$( "#create-product" ).button().on( "click", function() {
 			dialog.dialog( "open" );
+		});
+		$( ".keisti" ).each ( function() {
+		
+			$( this ).on( "click", function() {
+			
+				id = $( this ).data( 'id' );
+				$( '#id_taisomo_iraso' ).val ( id );
+				$( '#pav_taisomo_iraso' ).html ( $( this ).data ( 'pav' ) );			
+				dialog.dialog( "open" );	
+			});
+		});
+		$( ".salinti" ).each ( function() {
+		
+			$( this ).on( "click", function() {
+			
+				id = $( this ).data( 'id' );
+				$( '#id_salinamo_iraso' ).val ( id );
+				$( '#pav_salinamo_iraso' ).html ( $( this ).data ( 'pav' ) );			
+				trintidialog.dialog( "open" );	
+			});
 		});
 	});
   </script>
 </head>
 <body>
+	<p th:attr="class=${back_end_message.getCss_class()}"  th:text="${back_end_message.getMessage()}"></p>
 	<div id="menu">
 		<ul id="menu_sarasas">
 			<li id="menu_punktas" th:each="menu_item : ${lst_menu}">
@@ -146,11 +193,13 @@
 	</div>
 	<div id="dialog-form" title="Sukurti naują įrašą">
 		<p class="validateTips">Visi laukai privalomi</p>
+		<span id="pav_taisomo_iraso">Šis</span> įrašas bus pakeistas. Ar tikrai norite pakeisti įrašą?</p>
 		<form id="produkto_forma" method="POST">
 			<fieldset>
-				<label for="pav">Maisto medžiagų grupės pavadinimas</label>
+				<label for="pav">Produkto pavadinimas</label>
 				<input type="text" name="pav" id="pav" value="" class="text ui-widget-content ui-corner-all">
-				<input type="hidden" name="pildyti" value="papildyti">				
+				<input type="hidden" name="pildyti" value="papildyti">
+				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
 				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
@@ -158,35 +207,34 @@
 		</form>
 	</div>
 	<div id="main">
-		<h3>Maisto medžiagų grupės</h3>
-		<button id="create-product">Irašyti maisto medžiagų grupę</button>
-		<!--<form method="POST" action="">
-			<label for="pav">Maisto medziagu grupes pavadinimas</label>
-			<input name="pav" type="text">
-			<input type="submit" name="pildyti" class="frm_button" value="papildyti">
-		</form>-->
+		<h3>Esami produktai</h3>
+		<button id="create-product">Irašyti produktą</button>
 		<table id="duombazes_lentele">
 			<thead>
 			<tr>
-				<th>
-					Veiksmai
-				</th>
-				<th>
-					Maisto medžiagų grupės pavadinimas
-				</th>			
-				
+				<th>Veiksmai</th>
+				<th>Produkto pavadinimas</th>
 			</tr>
 			</thead>
 			<tbody>
-			<tr th:each="maisto_medz_grupe : ${lst}">
+			<tr th:each="produktas : ${lst}">
 				<td>
-					<input type="button" class="keisti" value="keisti" th:attr="data-id=${maisto_medz_grupe.getId()},data-pav=${maisto_medz_grupe.getPav()}">
-					<input type="button" class="keisti" value="šalinti" th:attr="data-id=${maisto_medz_grupe.getId()},data-pav=${maisto_medz_grupe.getPav()}">				
+					<input type="button" class="keisti" value="keisti" id="keisti" th:attr="data-id=${produktas.getId()},data-pav=${produktas.getPav()}">
+					<input type="button" class="salinti" value="šalinti" id="salinti" th:attr="data-id=${produktas.getId()},data-pav=${produktas.getPav()}">
 				</td>
-				<td th:text="${maisto_medz_grupe.getPav()}"></td>
+				<td th:text="${produktas.getPav()}"></td>
 			</tr>
 			</tbody>
 		</table>
+	</div>
+	<div id="dialog-confirm" title="Ištrinti įrašą?">
+		<p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
+		<span id="pav_salinamo_iraso">Šis</span> įrašas bus ištrintas ir nebus įmanoma jo atkurti. Ar tikrai norite ištrinti įrašą?</p>
+		<form id="salinimo_forma" method="POST">
+			<input type="hidden" name="salinti" value="pasalinti">
+			<input type="hidden" name="id" id="id_salinamo_iraso" value="0">
+			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+		</form>
 	</div>
 </body>
 </html>
