--- a/src/main/resources/templates/produktas_medziaga.html
+++ b/src/main/resources/templates/produktas_medziaga.html
@@ -36,9 +36,8 @@
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script>
 	$( function() {
+	
 		var dialog, form,
-		// From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
-		emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
 		id_produkto = $( "#id_produkto" ),
 		id_medziagos = $( "#id_medziagos" ),
 		kiekis = $( "#kiekis" ),
@@ -133,9 +132,44 @@
 				alert ( 'submitinom !' );
 			}
 		});
-	 */
+	 */	trintidialog = $( "#dialog-confirm" ).dialog({
+			autoOpen: false,
+			resizable: false,
+			height: "auto",
+			width: 400,
+			modal: true,
+			buttons: {
+				"Ištrinti įrašą": function() {
+					$( '#salinimo_forma' ).submit();
+					$( this ).dialog( "close" );
+				},
+				Atšaukti: function() {
+					$( this ).dialog( "close" );
+				}
+			}
+		});
 		$( "#create-product" ).button().on( "click", function() {
 			dialog.dialog( "open" );
+		});
+		$( ".keisti" ).each ( function() {
+		
+			$( this ).on( "click", function() {
+			
+				id = $( this ).data( 'id' );
+				$( '#id_taisomo_iraso' ).val ( id );
+				$( '#pav_taisomo_iraso' ).html ( $( this ).data ( 'pav' ) );			
+				dialog.dialog( "open" );	
+			});
+		});
+		$( ".salinti" ).each ( function() {
+		
+			$( this ).on( "click", function() {
+			
+				id = $( this ).data( 'id' );
+				$( '#id_salinamo_iraso' ).val ( id );
+				$( '#pav_salinamo_iraso' ).html ( $( this ).data ( 'pav' ) );			
+				trintidialog.dialog( "open" );	
+			});
 		});
 	});
   </script>
@@ -150,6 +184,7 @@
 	</div>
 	<div id="dialog-form" title="Sukurti naują įrašą">
 		<p class="validateTips">Visi laukai privalomi</p>
+		<span id="pav_taisomo_iraso">Šis</span> įrašas bus pakeistas. Ar tikrai norite pakeisti įrašą?</p>
 		<form id="produkto_forma" method="POST">
 			<fieldset>
 				<label for="id_produkto">ID_produkto</label>
@@ -159,10 +194,10 @@
 				<label for="kiekis">Kiekis</label>
 				<input type="number" name="kiekis" id="kiekis" value="" class="text ui-widget-content ui-corner-all">
 				<input type="hidden" name="pildyti" value="papildyti">				
+				<input type="hidden" name="id" id="id_taisomo_iraso" value="0">				
 				<!-- Allow form submission with keyboard without duplicating the dialog button -->
 				<!-- input type="submit" tabindex="-1" style="position:absolute; top:-1000px" name="pildyti" value="papildyti" -->
 				<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-				
 			</fieldset>
 		</form>
 	</div>
@@ -207,6 +242,15 @@
 			</tr>
 			</tbody>
 		</table>
+	</div>
+	<div id="dialog-confirm" title="Ištrinti įrašą?">
+		<p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
+		<span id="pav_salinamo_iraso">Šis</span> įrašas bus ištrintas ir nebus įmanoma jo atkurti. Ar tikrai norite ištrinti įrašą?</p>
+		<form id="salinimo_forma" method="POST">
+			<input type="hidden" name="salinti" value="pasalinti">
+			<input type="hidden" name="id" id="id_salinamo_iraso" value="0">
+			<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+		</form>
 	</div>
 </body>
 </html>
