--- a/src/main/resources/templates/produktas_medziaga.html
+++ b/src/main/resources/templates/produktas_medziaga.html
@@ -149,6 +149,8 @@
 			}
 		});
 		$( "#create-product" ).button().on( "click", function() {
+		
+			$( '#pav_veiksmo' ).html ( 'Kuriamas naujas įrašas' );
 			dialog.dialog( "open" );
 		});
 		$( ".keisti" ).each ( function() {
@@ -157,7 +159,8 @@
 			
 				id = $( this ).data( 'id' );
 				$( '#id_taisomo_iraso' ).val ( id );
-				$( '#pav_taisomo_iraso' ).html ( $( this ).data ( 'pav' ) );			
+				$( '#pav_veiksmo' ).html (  'Koreguojamas įrašas' );
+				$('#pav').val( $( this ).data ( 'pav' ));			
 				dialog.dialog( "open" );	
 			});
 		});
@@ -175,6 +178,7 @@
   </script>
 </head>
 <body>
+	<!--<p th:attr="class=${back_end_message.getCss_class()}"  th:text="${back_end_message.getMessage()}"></p>-->
 	<div id="menu">
 		<ul id="menu_sarasas">
 			<li id="menu_punktas" th:each="menu_item : ${lst_menu}">
@@ -182,9 +186,9 @@
 			</li>
 		</ul>
 	</div>
-	<div id="dialog-form" title="Sukurti naują įrašą">
+	<div id="dialog-form" title="Produkto medžiaga ir jos kiekis">
 		<p class="validateTips">Visi laukai privalomi</p>
-		<span id="pav_taisomo_iraso">Šis</span> įrašas bus pakeistas. Ar tikrai norite pakeisti įrašą?</p>
+		<p id="pav_veiksmo"></p>
 		<form id="produkto_forma" method="POST">
 			<fieldset>
 				<label for="id_produkto">ID_produkto</label>
@@ -245,7 +249,7 @@
 	</div>
 	<div id="dialog-confirm" title="Ištrinti įrašą?">
 		<p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
-		<span id="pav_salinamo_iraso">Šis</span> įrašas bus ištrintas ir nebus įmanoma jo atkurti. Ar tikrai norite ištrinti įrašą?</p>
+		<p>Šis įrašas <span id="pav_salinamo_iraso"></span> bus ištrintas ir nebus įmanoma jo atkurti. Ar tikrai norite ištrinti įrašą?</p>
 		<form id="salinimo_forma" method="POST">
 			<input type="hidden" name="salinti" value="pasalinti">
 			<input type="hidden" name="id" id="id_salinamo_iraso" value="0">
